# LabHelper

./: CMakeLists.txt  FlowWork.drawio  README.md
.github/workflows/: cmake-multi-platform-Parallel-Processing.yml  cmake-multi-platform.yml
src/: main.c  main.h  variable.c
src/CopyFile/: copyfile.c  copyfile.h
src/Log/: log.c  log.h
src/NumberGen/: gen.c  gen.h
src/ParallelProcessing/: fprintf_parallel.c  fprintf_parallel.h  parallel.c  parallel.h
src/Struct/: TreadArgs.h
src/Timer/: timer.c  timer.h
